--- a/style.css
+++ b/style.css
@@ -1,6 +1,151 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
+
+/* font-family: "Dancing Script", cursive; */
 * {
+    font-family: "Inter", sans-serif;
     background: rgb(0, 0, 0);
     color: white;
     margin: 0;
     padding: 0;
+}
+
+.title {
+    font-size: 2.5rem;
+    font-weight: 900;
+}
+
+.title-description {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    text-align: center;
+}
+
+button {
+    border-radius: 2rem;
+    padding: 0.9rem 2.5rem;
+    background: rgb(230, 83, 60);
+    border: none;
+    font-size: 0.9rem;
+    font-weight: 600;
+}
+
+/* shared-style */
+.container {
+    max-width: 1060px;
+    margin: 20px auto;
+}
+
+/* header-section */
+/* header {
+    background: linear-gradient(180.00deg, rgb(17, 17, 17), rgba(119, 119, 119, 0) 100%);
+    height: 700px;
+} */
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 2rem;
+}
+
+.nav-title {
+    font-size: 2rem;
+}
+
+.nav-items {
+    display: flex;
+    gap: 3rem;
+    /* font-size: 1.1rem; */
+    box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 39px;
+    padding: 1rem;
+
+}
+
+.header-info {
+    display: flex;
+    padding: 3rem;
+    /* margin-right: 3rem; */
+}
+
+.header-info-div {
+    display: flex;
+    width: calc(1060px/2);
+    padding: 3rem;
+}
+
+.header-info-left {}
+
+.header-info-left h1 {
+    font-size: 4rem;
+    font-weight: 900;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+}
+
+.header-info-left p {
+    margin: 2rem 0;
+    text-align: left;
+}
+
+span {
+    font-family: "Dancing Script", cursive;
+}
+
+.header-info-right {
+    /* box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 12px;
+    backdrop-filter: blur(20px); */
+    background: rgba(255, 255, 255, 0.1);
+    background-image: url("images/Images\ 2.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    width: 100%;
+    height: 500px;
+
+}
+
+/* main-section */
+.habits-section {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.p-width {
+    width: 60%;
+}
+
+.habits {
+    display: flex;
+
+}
+
+.habit {
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.habit img {
+    border-radius: 50%;
+    margin-bottom: 2rem;
+}
+
+.habit-name {
+    font-size: 1.1rem;
+    margin: 0.5rem;
+    text-align: center;
+
+
 }
